# rust-projects

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md
10-string-slices/: README.md
10-string-slices/src/: main.rs
11-structs/: Cargo.toml  README.md
13-enums-data-pattern-matching/src/: main.rs
2-hello_cargo/: .gitignore  README.md
4-variables/: README.md
4-variables/src/: main.rs
5-data_types/: Cargo.toml
5-data_types/src/: main.rs
6-functions/: README.md
7-control_flow/src/: main.rs
8-ownership/: Cargo.toml  README.md
9-references-and-borrowing/: README.md
9-references-and-borrowing/src/: main.rs
BasicsOld/10-string-slices/: Cargo.toml
BasicsOld/12-methods/: Cargo.toml  README.md
arreglos/: Cargo.toml
bloques/: Cargo.toml
condiciones/: Cargo.toml
formatted-display/: .gitignore
formatting-formatting/: Cargo.toml
fr-url-shortener/:  example.env  .gitignore  Cargo.toml  README.md  Taskfile.yml  docker-compose.yaml  env.example  env.gitpod.example  gitpod.example.env  init_data.sql  test_main.http
fr-url-shortener/config/latest/: configurations.properties
fr-url-shortener/migrations/2022-08-22-050022_create_urls_table/: down.sql  up.sql
fr-url-shortener/src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
fr-url-shortener/src/config/: configs.rs
fr-url-shortener/src/urls/: actions.rs  dto.rs  mod.rs  routes.rs
guessing_game/: README.md
hello_cargo/: Cargo.toml
hello_world/: README.md
text-editor/: .gitignore  Cargo.toml
variable-mutabilty/: Cargo.toml
variables-scope-shadowing/: Cargo.toml
(+41 files in other folders)
