[package]
name = "fr-url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0.139", features = ["derive"]}
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres"] }