[package]
name = "fr-url-shortener"
version = "0.1.0"
authors = ["Eduardo Flores <efloresambrosio@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.139", features = ["derive"] }
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
chrono = "0.4"
lazy_static = "1.4"
r2d2 = "0.8.10"
diesel_migrations = "1.4.0"
r2d2_postgres = "0.18.1"
